# resolve-ai-helper

./: .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  INSTALL.md  LICENSE  MAKEFILE_EXAMPLES.sh  MAKEFILE_GUIDE.md  Makefile  PLAN.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  RESOLVE_DESIGN.md  SCRIPT_RENAME.md  TESTING_GUIDE.md  TROUBLESHOOTING.md  UI_PREVIEW.md  build_exe.py  pyproject.toml  test_resolve_ui.py  test_show_ui.py
core/: __init__.py  cli.py  model_manager.py  transcribe.py  utils.py
core/ui/: __init__.py  main_window.py  progress_window.py  result_dialog.py
resolve_scripts/: launch_transcribe_ui.py  place_test_subtitle.py  resolve-ai-helper.py  test_exe_place_subtitle.py  test_globals.py  test_ui_workflow.py  transcribe_timeline.py  transcribe_timeline_debug.py
scripts/: shorts_builder.py  shorts_transcribe.py
templates/: prompt_highlights.txt
tests/: test_basic.py
