[project]
name = "shorts-builder"
version = "0.1.0"
description = "Local VOD → GPU Whisper transcription → captions → LLM highlight selection → FFmpeg multi-short rendering (9:16 with burned-in captions)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "faster-whisper==1.0.3",
    "tqdm",
    "python-dotenv",
    "openai>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "ipython",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []
include = [
    "scripts/*.py",
    "templates/*.txt",
]

[dependency-groups]
dev = []

