[project]
name = "resolve-ai-helper"
version = "0.1.0"
description = "AI-powered transcription for DaVinci Resolve free version - bringing Whisper AI to your timeline"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "faster-whisper==1.0.3",
    "tqdm",
    "python-dotenv",
    "openai>=1.40.0",
    "PySide6>=6.6.0",
    "pyinstaller>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "ipython",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []
include = [
    "scripts/*.py",
    "templates/*.txt",
]

[dependency-groups]
dev = []

